--- a/Final Project/NumericBox/NumericBox.vcxproj
+++ b/Final Project/NumericBox/NumericBox.vcxproj
@@ -92,7 +92,7 @@
     <ProjectReference Include="..\Control\Control.vcxproj">
       <Project>{34d682ea-c8c1-4748-a8b8-cd42dddd7349}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\EventEngine\EventEngine.vcxproj">
+    <ProjectReference Include="..\EventHandler\EventHandler.vcxproj">
       <Project>{53df0d8f-b144-4205-bef4-79dbf90ec735}</Project>
     </ProjectReference>
     <ProjectReference Include="..\Label\Label.vcxproj">
